Added the Title Option

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       <h1>Welcome to Magic Notes</h1>
       <div class="card">
         <div class="card-body">
+          <h5 class="card-title">Add Title</h5>
+          <div class="form-group">
+            <textarea class="form-control" id="addTitle" rows="1"></textarea>
+          </div>
           <h5 class="card-title">Add a note</h5>
           <div class="form-group">
             <textarea class="form-control" id="addTxt" rows="3"></textarea>
